Add pictures and recipes
Add lentil soup and green spaghetti pictures in the images
directory, and add images, description, ingredients and steps for
the lentil-soup.html and green-spaghetti.html.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
         "crème",
+        "dente",
         "flanera",
-        "Napolitano"
+        "Napolitano",
+        "poblanos",
+        "tatemar"
     ]
 }
