--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,3 @@
 {
-    "cSpell.words": [
-        "crème",
-        "dente",
-        "flanera",
-        "Napolitano",
-        "poblanos",
-        "tatemar"
-    ]
+    "cSpell.words": []
 }
